5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1807_2563.log
== TEST (2019-06-04 17:53:09) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))

while(size(media) > 1):
	
	cont = 0
	
	for elemento in range(7):
		print(elemento)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:53:50) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))

while(size(media) > 1):
	
	cont = 0
	
	for elemento in range(7):
		print(elemento)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:54:19) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))


	
	cont = 0
	
	for elemento in range(7):
		print(elemento)
	
	

-- ERROR:
File "XXXX", line 7
    cont = 0
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:54:28) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))


	
	
	
	for elemento in range(7):
		print(elemento)
	
	

-- ERROR:
File "XXXX", line 9
    for elemento in range(7):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:54:40) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))


	
	
	
for elemento in range(7):
	print(elemento)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:57:34) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))

for elemento in range(7):
	print(elemento)#
	
	if(size(media) >= 5):
		print(media)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:58:04) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))

for elemento in range(7):
	#print(elemento)#
	
	if(size(media) >= 5):
		print(media)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:58:27) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))

for elemento in range(7):
	#print(elemento)#
	
	if(size(media) >= 5):
		print(media)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 18:01:04) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))

while(size(media) > 1):
	
	cont = 0
	
	for elemento in range(7):
		print(elemento)
	
	

-- EXECUTION TIME:
431.786
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 18:09:06) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if(size(media) >= 5 and size(media < 7)):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:53:04) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if(size(media) >= 5 and size(media < 7)):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:54:14) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if(size(media) >= 5 and size(media < 7)):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 15:57:08) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if( >=5 i < 7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- EXECUTION TIME:
0.759993
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 8
    if( >=5 i < 7):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:57:09) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if( >=5 i < 7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- ERROR:
File "XXXX", line 8
    if( >=5 i < 7):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 15:57:09) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if( >=5 i < 7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- EXECUTION TIME:
1.34176
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 8
    if( >=5 i < 7):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:57:14) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if( >= 5 i < 7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- ERROR:
File "XXXX", line 8
    if( >= 5 i < 7):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:57:17) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if( >= 5 i < 7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- ERROR:
File "XXXX", line 8
    if( >= 5 i < 7):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 15:57:17) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if( >= 5 i < 7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- EXECUTION TIME:
0.741572
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 8
    if( >= 5 i < 7):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:57:22) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if( <= 5 i < 7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- ERROR:
File "XXXX", line 8
    if( <= 5 i < 7):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:57:24) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if( <= 5 i < 7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- ERROR:
File "XXXX", line 8
    if( <= 5 i < 7):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 15:57:25) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if( <= 5 i < 7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- EXECUTION TIME:
0.784713
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 8
    if( <= 5 i < 7):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:57:52) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if( i >= 5 and i <7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:58:25) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if( i >= 5 and i <7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:58:52) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if( i >= 5 and i <7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 15:58:57) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if( i >= 5 and i <7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- EXECUTION TIME:
1.97677
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
6
9
10
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
6
6
9
10
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
11
15
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 15:58:58) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if( i >= 5 and i <7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- EXECUTION TIME:
2.73776
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
6
9
10
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
5
8
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 15:58:58) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if( i >= 5 and i <7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- EXECUTION TIME:
2.2713
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
11
15
16
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:

-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:59:59) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if(  5 <= i <7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:01:56) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if(  5 <= i <7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:01:58) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while(size(media) > 1):
	for i in media:
		if(  5 <= i <7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- EXECUTION TIME:
1.09574
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
6
9
10
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
medias:11
medias:15
medias:16
medias:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
medias:5
medias:8
medias:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:02:41) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while (media) > 1:
	for i in media:
		if(  5 <= i <7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:03:00) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while size(media) > 1:
	for i in media:
		if(  5 <= i <7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:04:08) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while size(media) > 1:
	for i in media:
		if(  5 <= i <7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("123medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:04:58) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))
aprovados = 0

while size(media) > 1:
	for i in media:
		if(  5 <= i <7):
			aprovados = aprovados + 1
	print(aprovados)
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:05:51) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))

aprovados = 0

while size(media) > 1:
	
	for i in media:
		if(  5 <= i <7):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:05:53) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))

aprovados = 0

while size(media) > 1:
	
	for i in media:
		if(  5 <= i <7):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media = array(eval(input("medias:")))
	
			

-- EXECUTION TIME:
1.09035
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
6
9
10
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
15
16
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
medias:5
medias:8
medias:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:05:57) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))

aprovados = 0

while size(media) > 1:
	
	for i in media:
		if(  5 <= i <7):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media = array(eval(input("medias:")))
	
			

-- EXECUTION TIME:
0.980165
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
6
9
10
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
15
16
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:06:00) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))

aprovados = 0

while size(media) > 1:
	
	for i in media:
		if(  5 <= i <7):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:06:05) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))

aprovados = 0

while size(media) > 1:
	
	for i in media:
		if(  5 <= i <7):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:07:26) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))

aprovados = 0

while size(media) > 1:
	
	for i in media:
		if(  5 <= i <7):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:07:32) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))

aprovados = 0

while size(media) > 1:
	
	for i in media:
		if(  5 <= i <7):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:07:58) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))

aprovados = 0

while size(media) > 1:
	
	for elemento in media:
		if(  5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:09:14) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))

aprovados = 0

while size(media) > 1:
	
	for elemento in media:
		if(  5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:09:58) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))

aprovados = 0

while size(media) > 1:
	
	for elemento in media:
		if(  5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:10:38) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))

aprovados = 0

while size(media) > 1:
	
	for elemento in media:
		if(  5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:11:39) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))

aprovados = 0

while size(media) > 1:
	
	for elemento in media:
		if(  5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:14:46) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))

aprovados = 0

while size(media) > 1:
	aprovados = 0

	for elemento in media:
		if(  5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media = array(eval(input("medias:")))
	
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:15:22) 
-- CODE:
from numpy import*

media = array(eval(input("medias:")))

aprovados = 0

while size(media) > 1:
	aprovados = 0

	for elemento in media:
		if(  5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media = array(eval(input("medias:")))
	
			

-- EXECUTION TIME:
0.928177
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
